--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "binance_spot_connector_rust"
+name = "rust-binance"
 version = "1.1.2"
 authors = ["Binance"]
 edition = "2021"
 resolver = "2"
 autoexamples = false
-description = "This is a lightweight library that works as a connector to the Binance public API"
+description = "This is a fork "
 readme = "README.md"
-repository = "https://github.com/binance/binance-connector-rust"
+repository = "https://github.com/JaydenElliott/rust-binance"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = ["enable-ureq", "enable-tungstenite"]
@@ -55,6 +54,7 @@ serde_json = { version = "1.0.78", optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
 futures-util = { version = "0.3.21", optional = true }
 tokio = { version = "1", features = ["time"], optional = true }
+reqwest = "0.12.4"
 
 # enable-tungstenite
 tungstenite = { version = "0.20.1", features = ["native-tls"], optional = true }
