--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binance_spot_connector_rust"
-version = "1.1.0"
+version = "1.1.3"
 authors = ["Binance"]
 edition = "2021"
 resolver = "2"
@@ -14,11 +14,16 @@ license = "MIT"
 
 [features]
 default = ["enable-ureq", "enable-tungstenite"]
-enable-hyper = [ "hyper", "hyper-tls", "serde_json", "futures-util", "tokio" ]
-enable-ureq = [ "ureq", "serde_json" ]
+enable-hyper = ["hyper", "hyper-tls", "serde_json", "futures-util", "tokio"]
+enable-ureq = ["ureq", "serde_json"]
 enable-tungstenite = ["tungstenite"]
-enable-tokio-tungstenite = ["tokio-tungstenite"]
-full = ["enable-hyper", "enable-tungstenite", "enable-ureq", "enable-tokio-tungstenite"]
+enable-tokio-tungstenite = ["tokio-tungstenite", "futures-util", "tokio"]
+full = [
+  "enable-hyper",
+  "enable-tungstenite",
+  "enable-ureq",
+  "enable-tokio-tungstenite",
+]
 
 [dependencies]
 hmac = "0.12.0"
@@ -27,12 +32,18 @@ serde = { version = "1.0.136", features = ["derive"] }
 sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
 url = "2.2.2"
 rust_decimal = "1.24.0"
-http = "0.2.7"
 strum = { version = "0.24", features = ["derive"] }
 rand = "0.8.5"
 signature = "2.2.0"
 base64 = "0.13.1"
-ed25519-dalek = { version = "2.1.0", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }
+ed25519-dalek = { version = "2.1.0", features = [
+  "serde",
+  "zeroize",
+  "rand_core",
+  "digest",
+  "pkcs8",
+  "pem",
+] }
 
 # enable-ureq
 ureq = { version = "2.4.0", optional = true }
@@ -40,15 +51,22 @@ ureq = { version = "2.4.0", optional = true }
 # enable-hyper
 hyper = { version = "0.14.16", features = ["full"], optional = true }
 serde_json = { version = "1.0.78", optional = true }
-hyper-tls = {version = "0.5.0", optional = true }
-futures-util = {version = "0.3.21", optional = true }
+hyper-tls = { version = "0.6.0", optional = true }
+futures-util = { version = "0.3.21", optional = true }
 tokio = { version = "1", features = ["time"], optional = true }
 
+http = "1.1.0"
+reqwest = "0.12.4"
+anyhow = "1.0.82"
+
+
 # enable-tungstenite
-tungstenite = {version = "0.20.1", features = ["native-tls"], optional = true}
+tungstenite = { version = "0.21.0", features = ["native-tls"], optional = true }
 
 # enable-tokio-tungstenite
-tokio-tungstenite = {version = "0.17.1", features = ["native-tls"], optional = true}
+tokio-tungstenite = { version = "0.21.0", features = [
+  "native-tls",
+], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
